CC-26/History (#21)